<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <Space
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="10" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="80"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/the_state_of_the_student"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ToggleButton
                android:id="@+id/tbt"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:onClick="changeLayout"
                android:textOff="@string/not_allergic"
                android:textOn="@string/allergic"
                app:backgroundTint="@color/cardview_dark_background" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="10"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/familyET"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/family"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/classET"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="2"
                    android:text=""
                    android:ems="10"
                    android:hint="@string/classStr"
                    android:inputType="number" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/gradeET"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="2"
                    android:ems="10"
                    android:text=""
                    android:hint="@string/grade"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5" />

        <LinearLayout
            android:id="@+id/vaccineLayoutView"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="15"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="10"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/enter_the_vaccines_infomation"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/sp"
                        android:layout_width="match_parent"
                        android:layout_height="0px"
                        android:layout_weight="1" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="0px"
                        android:layout_weight="2" />
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="7"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/locationET"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:ems="10"
                    android:hint="@string/location"
                    android:inputType="textPersonName" />

                <Space
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="openCalendar"
                    app:backgroundTint="@color/cardview_dark_background"
                    app:srcCompat="@android:drawable/ic_menu_my_calendar" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="7"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/displayDate"
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="3" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Space
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:onClick="sendToFB"
                    android:text="@string/save_details"
                    app:backgroundTint="@color/cardview_dark_background" />

                <Space
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5" />

    </LinearLayout>

    <Space
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="10" />
</LinearLayout>
